RESOLVED FIXED62667
RenderLayer::maximumScrollPosition() is wrong
https://bugs.webkit.org/show_bug.cgi?id=62667
Summary RenderLayer::maximumScrollPosition() is wrong
Simon Fraser (smfr)
Reported 2011-06-14 15:31:51 PDT
RenderLayer::maximumScrollPosition() needs to subtract the layer size.
Attachments
Patch (2.62 KB, patch)
2011-06-29 15:48 PDT, Anders Carlsson
simon.fraser: review+
Anders Carlsson
Comment 1 2011-06-29 15:41:45 PDT
*** Bug 63664 has been marked as a duplicate of this bug. ***
Anders Carlsson
Comment 2 2011-06-29 15:48:09 PDT
Simon Fraser (smfr)
Comment 3 2011-06-29 15:49:04 PDT
Comment on attachment 99165 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=99165&action=review > Source/WebCore/ChangeLog:8 > + No new tests. (OOPS!) Remove this.
Anders Carlsson
Comment 4 2011-06-29 15:53:19 PDT
Note You need to log in before you can comment on or make changes to this bug.