2011-06-29  Anders Carlsson  <andersca@apple.com>

Reviewed by Simon Fraser.

        RenderLayer::maximumScrollPosition() is wrong
        https://bugs.webkit.org/show_bug.cgi?id=62667

        * platform/ScrollableArea.h:
        (WebCore::ScrollableArea::isVerticalScrollerPinnedToMinimumPosition):
        (WebCore::ScrollableArea::isVerticalScrollerPinnedToMaximumPosition):
        Add these for good measure; they will be needed in an upcoming patch.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::maximumScrollPosition):
        Subtract the visible content rect, including the scroll bars.


Canonical link: https://commits.webkit.org/79339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90058 268f45cc-cd09-0410-ab3c-d52691b4dbfc